--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "node-jsc3d",
-  "version": "0.1.1",
+  "name": "jsc3d",
+  "version": "0.1.3",
   "description": "Node canvas port of JSC3D software model renderer, with CLI interface to render 3D models ",
   "main": "index.js",
   "scripts": {},
-  "bin": {
-    "jsc3d": "bin/jsc3d.js"
-  },
+  "bin": "bin/jsc3d.js",
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/michaelpb/node-jsc3d.git"
